--- a/ContactUs.html
+++ b/ContactUs.html
@@ -95,6 +95,18 @@
                 <li><a href="Documents/DevelopedNotDownloadedBusinessPlan.pdf" download="Developed-Not-Downloaded-Business-Plan">Business Plan Download</a></li>
                 <li><a href="https://ajrotert.github.io/ConnectingWebsiteToFirebase/index.html">FireChat Project</a></li>
             </ul>
+            <h1>Website URLs</h1>
+            <ul>
+                <li><a href="https://www.developednotdownloaded.com">www.developednotdownloaded.com</a></li>
+                <li><a href="https://developednotdownloaded.com">developednotdownloaded.com</a></li>
+                <li><a href="https://projects.developednotdownloaded.com">projects.developednotdownloaded.com</a></li>
+                <li><a href="https://www.cs-developer.info">www.cs-developer.info</a></li>
+                <li><a href="https://cs-developer.info">cs-developer.info</a></li>
+                <li><a href="https://projects.cs-developer.info">projects.cs-developer.info</a></li>
+                <li><a href="https://developednotdownloaded.firebaseapp.com">developednotdownloaded.firebaseapp.com</a></li>
+                <li><a href="https://developednotdownloaded.web.app">developednotdownloaded.web.app</a></li>
+                <li><a href="https://ajrotert.github.io/Developed-Not-Downloaded/index.html">ajrotert.github.io/Developed-Not-Downloaded/index.html</a></li>
+            </ul>
         </div>
     </main>
 
