--- a/Dynamic/HTML/OtherPlaceholder.html
+++ b/Dynamic/HTML/OtherPlaceholder.html
@@ -95,6 +95,22 @@
     </div>
     <div>
         <center>
+            <img class="resizing" src="Images/Projects/ClientHost.png" alt="Website" />
+            <h2><i>Client / Host Communication</i></h2>
+            <p>View progress on Github: <a href="https://github.com/ajrotert/BasicClientServerConnections">Visit Now</a></p>
+            <p>Language Used: Java</p>
+            <p>About:</p>
+            <p class="just">
+                Project exploring concepts talked about in Operating Systems. This project has two main parts, the Host and the Client java FX programs.
+                The host allows for multiple clients to connect and pass string messages back and forth. This process is broken down in to many threads, to handle
+                input and output simultaneously.
+            </p>
+            <hr class="table" />
+
+        </center>
+    </div>
+    <div>
+        <center>
             <h2><i>Programming Competitions</i></h2>
             <p>Language Used: C++, Python, C# </p>
             <p>About:</p>
@@ -113,4 +129,5 @@
             <hr class="table" />
         </center>
     </div>
+    
 </div>
