--- a/Projects.html
+++ b/Projects.html
@@ -48,12 +48,12 @@
         </center>
             <object id="iOS-Table"></object>
         <center>
-            <h1>Android Projects</h1>
+            <h1 class="top-margin">Android Projects</h1>
             <h3 class="margin"><a href="Android.html">View Android Projects</a></h3>
         </center>
             <object id="Android-Table"></object>
         <center>
-            <h1>Other Projects</h1>
+            <h1 class="top-margin">Other Projects</h1>
             <h3 class="margin"><a href="Other.html">View Other Projects</a></h3>
         </center>
         <object id="Other-Table"></object>
