--- a/AboutMe.html
+++ b/AboutMe.html
@@ -45,7 +45,7 @@
             <p class="just bio">
                 I am from Sioux Falls, SD. I got into programming because I like to problem solve. I am currently majoring in computer science and applied mathematics at Dakota State University.
                 I enjoy taking on new challenges and learning new techniques to solve them. Over my sophomore year of college, after completing Object Oriented design, I got into mobile app
-                development. I currently have five published iOS apps, and one published Android app. Now in my third year I build this website as way to show my work, as well support pages
+                development. I currently have five published iOS apps, and one published Android app. Now in my third year I built this website as way to show my work, as well support pages
                 for my published applications.
             </p>
         </div>
