--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body {
             <div class="container">
                 <img src="Images/LaptopFW.png" alt="Laptop" class="resize" />
                 <div class="centered">
-                    <h1 class="index">Offical Website of Developed Not Downloaded</h1>
+                    <h1 class="index">Official Website of Developed Not Downloaded</h1>
                     <h2 class="index">The start of something big.</h2>
                 </div>
             </div>
