--- a/Dynamic/HTML/OtherPlaceholder.html
+++ b/Dynamic/HTML/OtherPlaceholder.html
@@ -57,7 +57,7 @@
             <p class="just">
                 Mini-Golf is a command line game writen completely in assembly. The game takes a power level and angle
                 as input. The assembly code has to load the angle as a floating point to calculate the right angle. The
-                game ends when the . gets to the 0.
+                game ends when the '.' gets to the 0.
             </p>
 
             <hr class="table" />
@@ -101,7 +101,7 @@
             <p>Language Used: Java</p>
             <p>About:</p>
             <p class="just">
-                Project exploring concepts talked about in Operating Systems. This project has two main parts, the Host and the Client java FX programs.
+                Project exploring concepts talked about in Operating Systems. This project has two main parts, the Host and the Client JavaFX programs.
                 The host allows for multiple clients to connect and pass string messages back and forth. This process is broken down in to many threads, to handle
                 input and output simultaneously.
             </p>
