--- a/Dynamic/HTML/AndroidPlaceholder.html
+++ b/Dynamic/HTML/AndroidPlaceholder.html
@@ -10,7 +10,7 @@
             <p class="just">
                 Lift Coefficient Calclulator uses an Andriod based platform to calculate the lift coefficient formula.
                 The user interface implaments event handlers for each text field, allowing calculations to happen
-                as soon as all the need input is provided.
+                as soon as all the required input is provided.
 
             </p>
             <hr class="table" />
