--- a/Dynamic/NavigationBar.html
+++ b/Dynamic/NavigationBar.html
@@ -95,7 +95,7 @@
             </div>
         </li>
         <li class="dropdown navitem" id="Android-Page">
-            <a href="javascript:void(0)" class="dropbtn">Andriod Apps</a>    <!--Void so it does not link to a webpage-->
+            <a href="javascript:void(0)" class="dropbtn">Android Apps</a>    <!--Void so it does not link to a webpage-->
             <div class="dropdown-content">
                 <a href="LiftCoefficientCalculator.html">Lift Coefficient Calculator</a>
             </div>
@@ -104,7 +104,7 @@
             <a href="Projects.html" class="dropbtn">Projects</a>
             <div class="dropdown-content">
                 <a href="iOS.html">iOS Projects</a>
-                <a href="Android.html">Andriod Projects</a>
+                <a href="Android.html">Android Projects</a>
                 <a href="Other.html">Other Projects</a>
             </div>
         </li>
@@ -133,7 +133,7 @@
         document.getElementById("Projects-Page").classList.add("active");
     else if ((text + "iOS Projects") == title)
         document.getElementById("Projects-Page").classList.add("active");
-    else if ((text + "Andriod Projects") == title)
+    else if ((text + "Android Projects") == title)
         document.getElementById("Projects-Page").classList.add("active");
     else if ((text + "Other Projects") == title)
         document.getElementById("Projects-Page").classList.add("active");
