--- a/LiftCoefficientCalculator.html
+++ b/LiftCoefficientCalculator.html
@@ -66,7 +66,7 @@
             <h2 class="pages" id="about_page_link">About</h2>
             <div>
                 <h3>Current Availability</h3>
-                <p>Lift Coefficient Calculator is available for free on the Andriod app store. It can only be downloaded as an Andriod application.</p>
+                <p>Lift Coefficient Calculator is available for free on the Android app store. It can only be downloaded as an Android application.</p>
                 <p><strong><a href="https://play.google.com/store/apps/details?id=com.ar.liftcalculator">Download from the Google Play Store here.</a></strong></p>
                 <h3>App Description</h3>
                 <p>
