--- a/Android.html
+++ b/Android.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Developed Not Downlaoded | Andriod Projects</title>
+    <title>Developed Not Downlaoded | Android Projects</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
     <link rel="apple-touch-icon" href=“Images/weblogo180.png">
     <link rel="apple-touch-icon" sizes="76x76" href=“Images/weblogo76.png">
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div>
-        <center><img class="resizing" src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
+        <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
         <hr class="nav" />
     </div>
 
@@ -32,7 +32,7 @@
 
     <hr class="nav" />
 
-    <center><h1 class="pages">Andriod Projects</h1></center>
+    <center><h1 class="pages">Android Projects</h1></center>
 
     <hr class="projects" />
     <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
