--- a/Dynamic/HTML/AndroidPlaceholder.html
+++ b/Dynamic/HTML/AndroidPlaceholder.html
@@ -8,7 +8,7 @@
             <p>Language Used: C#</p>
             <p>About:</p>
             <p class="just">
-                Lift Coefficient Calclulator uses an Andriod based platform to calculate the lift coefficient formula.
+                Lift Coefficient Calclulator uses an Android based platform to calculate the lift coefficient formula.
                 The user interface implaments event handlers for each text field, allowing calculations to happen
                 as soon as all the required input is provided.
 
