--- a/BusinessPlan.html
+++ b/BusinessPlan.html
@@ -39,7 +39,7 @@
         <h2>Product</h2>
         <p>Developed Not Downloaded creates a platform for an ecosystem of software engineers, developers, and software development firms and connects them to businesses looking for software development.</p>
         <p>
-            This service works by a company creating a listing for what software they are looking to have developed, rather that’s a website, mobile app, or desktop software. Developers can then post beds on the listings stating what that piece of software will cost, the time to develop the software, and any other fees. The business can then choose the most competitive offer, and have the software developed.
+            This service works by a company creating a listing for what software they are looking to have developed, rather that’s a website, mobile app, or desktop software. Developers can then post bids on the listings stating what that piece of software will cost, the time to develop the software, and any other fees. The business can then choose the most competitive offer, and have the software developed.
         </p>
         <h2>Customers</h2>
         <p>
