--- a/Dynamic/HTML/AndroidPlaceholder.html
+++ b/Dynamic/HTML/AndroidPlaceholder.html
@@ -3,7 +3,7 @@
         <center>
             <img class="resizing" src="Images/Projects/Lift.png" alt="Lift Force Calculator" />
             <h2><i>Lift Force Calculator</i></h2>
-            <p>Published: <a href="LiftForceCalculator.html">Support Page</a></p>
+            <p>Published: <a href="LiftCoefficientCalculator.html">Support Page</a></p>
             <p>View at the Google Play Store: <a href="https://play.google.com/store/apps/details?id=com.ar.liftcalculator">Visit Now</a></p>
             <p>Language Used: C#</p>
             <p>About:</p>
