--- a/Android.html
+++ b/Android.html
@@ -49,11 +49,13 @@
 
     </footer>
 
-    <script src="Dynamic/NavigationBarJS.js"></script>
+    <script async src="Dynamic/NavigationBarJS.js"></script>
 
-    <script src="Dynamic/NavBar.js"></script>
+    <script async src="Dynamic/NavBar.js"></script>
 
-    <script src="Dynamic/loadprojects.js"></script>
+    <script async src="Dynamic/loadprojects.js"></script>
+
+    <script difer src="Dynamic/Scripts/PageLoader.js"></script>
 
 </body>
 </html>
