--- a/BusinessPlan.html
+++ b/BusinessPlan.html
@@ -32,6 +32,7 @@
     <hr class="nav" />
 
     <center><h1 class="pages">Business Plan</h1></center>
+    <center><h3 class="pages">(2020 DSU College Business Plan Competition)</h3></center>
 
     <div class="plan">
         <center><h1>Developed Not Downloaded</h1></center>
