--- a/Dynamic/HTML/AndroidPlaceholder.html
+++ b/Dynamic/HTML/AndroidPlaceholder.html
@@ -1,19 +1,22 @@
 ﻿<div class="grid-container">
-    <div>
-        <center>
-            <img class="resizing" src="Images/Projects/Lift.png" alt="Lift Force Calculator" />
-            <h2><i>Lift Force Calculator</i></h2>
-            <p>Published: <a href="LiftCoefficientCalculator.html">Support Page</a></p>
-            <p>View at the Google Play Store: <a href="https://play.google.com/store/apps/details?id=com.ar.liftcalculator">Visit Now</a></p>
-            <p>Language Used: C#</p>
-            <p>About:</p>
-            <p class="just">
-                Lift Coefficient Calclulator uses an Android based platform to calculate the lift coefficient formula.
-                The user interface implaments event handlers for each text field, allowing calculations to happen
-                as soon as all the required input is provided.
+    <div class="block_region">
+        <a class="overlay_region"></a>
+        <div class="inner_region">
+            <center>
+                <img class="resizing" src="Images/Projects/Lift.png" alt="Lift Force Calculator" />
+                <h2><i>Lift Force Calculator</i></h2>
+                <p>Published: <a href="LiftCoefficientCalculator.html">Support Page</a></p>
+                <p>View at the Google Play Store: <a href="https://play.google.com/store/apps/details?id=com.ar.liftcalculator">Visit Now</a></p>
+                <p>Language Used: C#</p>
+                <p>About:</p>
+                <p class="just">
+                    Lift Coefficient Calclulator uses an Android based platform to calculate the lift coefficient formula.
+                    The user interface implaments event handlers for each text field, allowing calculations to happen
+                    as soon as all the required input is provided.
 
-            </p>
-            <hr class="table" />
-        </center>
+                </p>
+                <hr class="table" />
+            </center>
+        </div>
     </div>
 </div>
