--- a/Dynamic/NavigationBar.html
+++ b/Dynamic/NavigationBar.html
@@ -137,6 +137,8 @@
         document.getElementById("Projects-Page").classList.add("active");
     else if ((text + "Other Projects") == title)
         document.getElementById("Projects-Page").classList.add("active");
+    else if ((text + "Project View") == title)
+        document.getElementById("Projects-Page").classList.add("active");
     else if ((text + "Computer Science Calculator App") == title)
         document.getElementById("iOS-Page").classList.add("active");
     else if ((text + "Holiday Clicker App") == title)
