--- a/Other.html
+++ b/Other.html
@@ -56,6 +56,8 @@
 
     <script src="Dynamic/loadprojects.js"></script>
 
+    <script src="Dynamic/Scripts/LoadPage.js"></script>
+
 </body>
 </html>
 
