--- a/ProjectView.html
+++ b/ProjectView.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <style>
+
     body {
         background: url(Images/DNDBKGTemplate2.png) repeat-x bottom;
     }
@@ -7,7 +8,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Developed Not Downlaoded | Android Projects</title>
+    <title>Developed Not Downlaoded | Project View</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
     <link rel="apple-touch-icon" href=“Images/weblogo180.png">
     <link rel="apple-touch-icon" sizes="76x76" href=“Images/weblogo76.png">
@@ -32,13 +33,13 @@
 
     <hr class="nav" />
 
-    <center><h1 class="pages">Android Projects</h1></center>
+    <center><h1 class="pages" id="title">Project View</h1></center>
 
     <hr class="projects" />
     <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
     <hr class="projects" />
 
-    <object id="Android-Table"></object>
+    <object id="placeholder"></object>
 
     <footer>
         <div class="right_position">
@@ -53,10 +54,7 @@
 
     <script src="Dynamic/NavBar.js"></script>
 
-    <script src="Dynamic/loadprojects.js"></script>
-
-    <script src="Dynamic/Scripts/PageLoader.js"></script>
+    <script src="Dynamic/Scripts/LoadPage.js"></script>
 
 </body>
 </html>
-
