--- a/Dynamic/HTML/OtherPlaceholder.html
+++ b/Dynamic/HTML/OtherPlaceholder.html
@@ -1,133 +1,157 @@
 ﻿<div class="grid-container">
-    <div>
-        <center>
-            <img class="resizing" src="Images/Projects/GripFinder2.png" alt="Grip Finder" />
-            <h2><i>Grip Finder</i></h2>
-            <p>View progress on Github: <a href="https://github.com/ajrotert/Grip-Finder">Visit Now</a></p>
-            <p>Language Used: C#</p>
-            <p>About:</p>
-            <p class="just">
-                Grip Finder is a Windows Form Application. It is desiged based off another project, and is based
-                around Object Oriented Design. Grip Finder works by taking five inputs, and their importance
-                and outputs a golf grip recommendation.
-            </p>
+    <div class="block_region">
+        <a class="overlay_region"></a>
+        <div class="inner_region">
+            <center>
+                <img class="resizing" src="Images/Projects/GripFinder2.png" alt="Grip Finder" />
+                <h2><i>Grip Finder</i></h2>
+                <p>View progress on Github: <a href="https://github.com/ajrotert/Grip-Finder">Visit Now</a></p>
+                <p>Language Used: C#</p>
+                <p>About:</p>
+                <p class="just">
+                    Grip Finder is a Windows Form Application. It is desiged based off another project, and is based
+                    around Object Oriented Design. Grip Finder works by taking five inputs, and their importance
+                    and outputs a golf grip recommendation.
+                </p>
 
-            <hr class="table" />
-        </center>
+                <hr class="table" />
+            </center>
+        </div>
     </div>
-    <div>
-        <center>
-            <img class="resizing" src="Images/Projects/Minesweeper.png" alt="Minesweeper" />
-            <h2><i>Minesweeper</i></h2>
-            <p>View progress on Github: <a href="https://github.com/ajrotert/AR.Minesweeper">Visit Now</a></p>
-            <p>Language Used: C#</p>
-            <p>About:</p>
-            <p class="just">
-                Minesweeper uses some basic Object Oriented Design, and dynamic layouts to create a minesweeper game.
-                This Windows Form Application uses a flood fill algorithm to queue and dequeue blocks until the queue
-                is empty.
-            </p>
+    <div class="block_region">
+        <a class="overlay_region"></a>
+        <div class="inner_region">
+            <center>
+                <img class="resizing" src="Images/Projects/Minesweeper.png" alt="Minesweeper" />
+                <h2><i>Minesweeper</i></h2>
+                <p>View progress on Github: <a href="https://github.com/ajrotert/AR.Minesweeper">Visit Now</a></p>
+                <p>Language Used: C#</p>
+                <p>About:</p>
+                <p class="just">
+                    Minesweeper uses some basic Object Oriented Design, and dynamic layouts to create a minesweeper game.
+                    This Windows Form Application uses a flood fill algorithm to queue and dequeue blocks until the queue
+                    is empty.
+                </p>
 
-            <hr class="table" />
-        </center>
+                <hr class="table" />
+            </center>
+        </div>
     </div>
-    <div>
-        <center>
-            <img class="resizing" src="Images/Projects/Tsharp.png" alt="Tsharp" />
-            <h2><i>Tsharp</i></h2>
-            <p>View progress on Github: <a href="https://github.com/ajrotert/Language-Processing">Visit Now</a></p>
-            <p>Language Used: Yacc, Lex, C</p>
-            <p>About:</p>
-            <p class="just">
-                Tsharp is designed to do simple math calculations and graphs. Tsharp uses regular expressions to create a new simple
-                programming language. The key words from the Tsharp
-                language are translated and compiled to C, creating an executable file.
-            </p>
+    <div class="block_region">
+        <a class="overlay_region"></a>
+        <div class="inner_region">
+            <center>
+                <img class="resizing" src="Images/Projects/Tsharp.png" alt="Tsharp" />
+                <h2><i>Tsharp</i></h2>
+                <p>View progress on Github: <a href="https://github.com/ajrotert/Language-Processing">Visit Now</a></p>
+                <p>Language Used: Yacc, Lex, C</p>
+                <p>About:</p>
+                <p class="just">
+                    Tsharp is designed to do simple math calculations and graphs. Tsharp uses regular expressions to create a new simple
+                    programming language. The key words from the Tsharp
+                    language are translated and compiled to C, creating an executable file.
+                </p>
 
-            <hr class="table" />
-        </center>
+                <hr class="table" />
+            </center>
+        </div>
     </div>
-    <div>
-        <center>
-            <img class="resizing" src="Images/Projects/Golf2.png" alt="Mini-Golf" />
-            <h2><i>Mini-Golf</i></h2>
-            <p>View progress on Github: <a href="https://github.com/ajrotert/Assembely">Visit Now</a></p>
-            <p>Language Used: Assembly x86</p>
-            <p>About:</p>
-            <p class="just">
-                Mini-Golf is a command line game writen completely in assembly. The game takes a power level and angle
-                as input. The assembly code has to load the angle as a floating point to calculate the right angle. The
-                game ends when the '.' gets to the 0.
-            </p>
+    <div class="block_region">
+        <a class="overlay_region"></a>
+        <div class="inner_region">
+            <center>
+                <img class="resizing" src="Images/Projects/Golf2.png" alt="Mini-Golf" />
+                <h2><i>Mini-Golf</i></h2>
+                <p>View progress on Github: <a href="https://github.com/ajrotert/Assembely">Visit Now</a></p>
+                <p>Language Used: Assembly x86</p>
+                <p>About:</p>
+                <p class="just">
+                    Mini-Golf is a command line game writen completely in assembly. The game takes a power level and angle
+                    as input. The assembly code has to load the angle as a floating point to calculate the right angle. The
+                    game ends when the '.' gets to the 0.
+                </p>
 
-            <hr class="table" />
-        </center>
+                <hr class="table" />
+            </center>
+        </div>
     </div>
-    <div>
-        <center>
-            <img class="resizing" src="Images/Projects/Website2.png" alt="Website" />
-            <h2><i>Developed Not Download</i></h2>
-            <p>View progress on Github: <a href="https://github.com/ajrotert/Developed-Not-Downloaded">Visit Now</a></p>
-            <p>Language Used: HTML5, CSS3</p>
-            <p>About:</p>
-            <p class="just">
-                Developed Not Downloaded is a series of static webpages designed with HTML and CSS. It is my main website to
-                showcase my projects, and provide support to my published applications. 
-            </p>
+    <div class="block_region">
+        <a class="overlay_region"></a>
+        <div class="inner_region">
+            <center>
+                <img class="resizing" src="Images/Projects/Website2.png" alt="Website" />
+                <h2><i>Developed Not Download</i></h2>
+                <p>View progress on Github: <a href="https://github.com/ajrotert/Developed-Not-Downloaded">Visit Now</a></p>
+                <p>Language Used: HTML5, CSS3</p>
+                <p>About:</p>
+                <p class="just">
+                    Developed Not Downloaded is a series of static webpages designed with HTML and CSS. It is my main website to
+                    showcase my projects, and provide support to my published applications.
+                </p>
 
-            <hr class="table" />
-        </center>
+                <hr class="table" />
+            </center>
+        </div>
     </div>
-    <div>
-        <center>
-            <img class="resizing" src="Images/Projects/FireChat.png" alt="Website" />
-            <h2><i>FireChat</i></h2>
-            <p>View progress on Github: <a href="https://github.com/ajrotert/ConnectingWebsiteToFirebase">Visit Now</a></p>
-            <p>Language Used: HTML5, CSS3, JavaScript</p>
-            <p>About:</p>
-            <p class="just">
-                FireChat is my project website where I explore new ideas and concepts. Currently I have experimented with Firebase realtime database storage
-                responsive layouts, and CSS Grid views.
-            </p>
+    <div class="block_region">
+        <a class="overlay_region"></a>
+        <div class="inner_region">
+            <center>
+                <img class="resizing" src="Images/Projects/FireChat.png" alt="Website" />
+                <h2><i>FireChat</i></h2>
+                <p>View progress on Github: <a href="https://github.com/ajrotert/ConnectingWebsiteToFirebase">Visit Now</a></p>
+                <p>Language Used: HTML5, CSS3, JavaScript</p>
+                <p>About:</p>
+                <p class="just">
+                    FireChat is my project website where I explore new ideas and concepts. Currently I have experimented with Firebase realtime database storage
+                    responsive layouts, and CSS Grid views.
+                </p>
 
-            <hr class="table" />
-        </center>
+                <hr class="table" />
+            </center>
+        </div>
     </div>
-    <div>
-        <center>
-            <img class="resizing" src="Images/Projects/ClientHost.png" alt="Website" />
-            <h2><i>Client / Host Communication</i></h2>
-            <p>View progress on Github: <a href="https://github.com/ajrotert/BasicClientServerConnections">Visit Now</a></p>
-            <p>Language Used: Java</p>
-            <p>About:</p>
-            <p class="just">
-                Project exploring concepts talked about in Operating Systems. This project has two main parts, the Host and the Client JavaFX programs.
-                The host allows for multiple clients to connect and pass string messages back and forth. This process is broken down in to many threads, to handle
-                input and output simultaneously.
-            </p>
-            <hr class="table" />
+    <div class="block_region">
+        <a class="overlay_region"></a>
+        <div class="inner_region">
+            <center>
+                <img class="resizing" src="Images/Projects/ClientHost.png" alt="Website" />
+                <h2><i>Client / Host Communication</i></h2>
+                <p>View progress on Github: <a href="https://github.com/ajrotert/BasicClientServerConnections">Visit Now</a></p>
+                <p>Language Used: Java</p>
+                <p>About:</p>
+                <p class="just">
+                    Project exploring concepts talked about in Operating Systems. This project has two main parts, the Host and the Client JavaFX programs.
+                    The host allows for multiple clients to connect and pass string messages back and forth. This process is broken down in to many threads, to handle
+                    input and output simultaneously.
+                </p>
+                <hr class="table" />
 
-        </center>
+            </center>
+        </div>
     </div>
-    <div>
-        <center>
-            <h2><i>Programming Competitions</i></h2>
-            <p>Language Used: C++, Python, C# </p>
-            <p>About:</p>
-            <p class="just">
-                Programming Competitions I have competed in.
-                <ul>
-                    <li style="text-align: left;">2019 ACM Regional</li>
-                    <li style="text-align: left;">DSU Local Programming Competitions</li>
-                    <li style="text-align: left;">MICS Programming Competition in Fargo</li>
-                    <li style="text-align: left;">Google Hashcode</li>
-                    <li style="text-align: left;">Google Codejam</li>
-                    <li style="text-align: left;">Etc.</li>
-                </ul>
-            </p>
+    <div class="block_region">
+        <a class="overlay_region"></a>
+        <div class="inner_region">
+            <center>
+                <h2><i>Programming Competitions</i></h2>
+                <p>Language Used: C++, Python, C# </p>
+                <p>About:</p>
+                <p class="just">
+                    Programming Competitions I have competed in.
+                    <ul>
+                        <li style="text-align: left;">2019 ACM Regional</li>
+                        <li style="text-align: left;">DSU Local Programming Competitions</li>
+                        <li style="text-align: left;">MICS Programming Competition in Fargo</li>
+                        <li style="text-align: left;">Google Hashcode</li>
+                        <li style="text-align: left;">Google Codejam</li>
+                        <li style="text-align: left;">Etc.</li>
+                    </ul>
+                </p>
 
-            <hr class="table" />
-        </center>
+                <hr class="table" />
+            </center>
+        </div>
     </div>
-    
+
 </div>
