--- a/Projects.html
+++ b/Projects.html
@@ -46,12 +46,12 @@
             <h1>iOS Projects</h1>
             <h3 class="margin"><a href="iOS.html"> View iOS Projects</a></h3>
         </center>
-            <object id="iOS-Table"></object>
+        <object id="iOS-Table"></object>
         <center>
             <h1 class="top-margin">Android Projects</h1>
             <h3 class="margin"><a href="Android.html">View Android Projects</a></h3>
         </center>
-            <object id="Android-Table"></object>
+        <object id="Android-Table"></object>
         <center>
             <h1 class="top-margin">Other Projects</h1>
             <h3 class="margin"><a href="Other.html">View Other Projects</a></h3>
@@ -73,6 +73,8 @@
     <script src="Dynamic/NavBar.js"></script>
 
     <script src="Dynamic/loadprojects.js"></script>
+
+    <script src="Dynamic/Scripts/PageLoader.js"></script>
 
 </body>
 </html>
