--- a/iOS.html
+++ b/iOS.html
@@ -55,6 +55,8 @@
 
     <script src="Dynamic/loadprojects.js"></script>
 
+    <script src="Dynamic/Scripts/PageLoader.js"></script>
+
 </body>
 </html>
 
