--- a/ProjectView.html
+++ b/ProjectView.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
     <link rel="stylesheet" href="Styles/ProjectLayout.css" />
+    <link rel="stylesheet" href="Styles/ProjectViewLayout.css" />
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
@@ -35,11 +36,11 @@
 
     <center><h1 class="pages" id="title">Project View</h1></center>
 
+    <object id="placeholder" class="region"></object>
+
     <hr class="projects" />
     <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
     <hr class="projects" />
-
-    <object id="placeholder"></object>
 
     <footer>
         <div class="right_position">
