--- a/ContactUs.html
+++ b/ContactUs.html
@@ -9,10 +9,10 @@
     <meta charset="utf-8" />
     <title>Developed Not Downlaoded | Contact Us</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
-    <link rel="apple-touch-icon" href=“Images/weblogo180.png">
-    <link rel="apple-touch-icon" sizes="76x76" href=“Images/weblogo76.png">
-    <link rel="apple-touch-icon" sizes="120x120" href=“Images/weblogo120.png">
-    <link rel="apple-touch-icon" sizes="152x152" href=“Images/weblogo152.png">
+    <link rel="apple-touch-icon" href="Images/weblogo180.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="Images/weblogo76.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="Images/weblogo120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="Images/weblogo152.png">
 
     <link rel="shortcut icon" href="Images/weblogo180.png" />
     <link rel="stylesheet" href="Styles/normalize.css" />
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="Styles/ContactLayout.css" />
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="Dynamic/send.js"></script>
 
 </head>
 <body>
@@ -48,6 +50,21 @@
                 <h3>Phone: (605) 215-8188</h3>
             </center>
         </div>
+
+        <!--
+        <div id="grid-form">
+            <center><h1 class="pages">Contact Form</h1></center>
+            <form name="ContactForm" class="contact" id="ContactForm" method="get">
+                <label>Name or Organization</label><br />
+                <input type="text" id="NameBox" required name="NameBox"/><br /><br />
+                <label>Contact</label><br />
+                <input placeholder="Email or Phone Number" type="text" id="ContactBox" name="ContactBox" /><br /><br />
+                <label>Message</label><br />
+                <textarea id="MessageBox" name="MessageBox" required></textarea><br /><br />
+                <button id="SentButton" type="button">Send</button>
+            </form>
+        </div>
+        -->
 
         <div id="grid-main">
             <center><h1 class="pages">Site Map</h1></center>
