--- a/Dynamic/HTML/OtherPlaceholder.html
+++ b/Dynamic/HTML/OtherPlaceholder.html
@@ -134,6 +134,25 @@
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
+                <img class="resizing" src="Images/Projects/NumericDetector.png" alt="Website" />
+                <h2><i>Numeric Detector</i></h2>
+                <p>Live Demonstration: <a href="https://codepython.life">Visit Now</a></p>
+                <p>View progress on Github: <a href="https://github.com/ajrotert/NumberDetection">Visit Now</a></p>
+                <p>Language Used: JavaScript, HTML5, CSS3</p>
+                <p>About:</p>
+                <p class="just">
+                    Number Detector creates and uses a machine learning model to predict a hand written number. The model is trained using the MNIST
+                    dataset, and is retrained every time the webpage loads. The model trains and runs locally, using javascript.
+                </p>
+                <hr class="table" />
+
+            </center>
+        </div>
+    </div>
+    <div class="block_region">
+        <a class="overlay_region"></a>
+        <div class="inner_region">
+            <center>
                 <h2><i>Programming Competitions</i></h2>
                 <p>Language Used: C++, Python, C# </p>
                 <p>About:</p>
