--- a/iOS.html
+++ b/iOS.html
@@ -10,10 +10,10 @@
     <meta charset="utf-8" />
     <title>Developed Not Downlaoded | iOS Projects</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
-    <link rel="apple-touch-icon" href=“Images/weblogo180.png">
-    <link rel="apple-touch-icon" sizes="76x76" href=“Images/weblogo76.png">
-    <link rel="apple-touch-icon" sizes="120x120" href=“Images/weblogo120.png">
-    <link rel="apple-touch-icon" sizes="152x152" href=“Images/weblogo152.png">
+    <link rel="apple-touch-icon" href="Images/weblogo180.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="Images/weblogo76.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="Images/weblogo120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="Images/weblogo152.png">
 
     <link rel="shortcut icon" href="Images/weblogo180.png" />
     <link rel="stylesheet" href="Styles/normalize.css" />
