--- a/Dynamic/NavigationBar.html
+++ b/Dynamic/NavigationBar.html
@@ -92,6 +92,7 @@
                 <a href="ComputerScienceCalculator.html">Computer Science Calculator</a>
                 <a href="SpeedometerPlusMap.html">Speedometer Plus Map</a>
                 <a href="HolidayClicker.html">Holiday Clicker</a>
+                <a href="AugmentedRealityVisualizer.html">AR Visualizer</a>
             </div>
         </li>
         <li class="dropdown navitem" id="Android-Page">
@@ -121,7 +122,7 @@
     var title = document.title;
     var text = "Developed Not Downlaoded | ";
     
-    if((text + "Contact Us") == title)
+    if ((text + "Contact Us") == title)
         document.getElementById("Contact-Page").classList.add("active");
     else if ((text + "Home") == title)
         document.getElementById("Home-Page").classList.add("active");
@@ -150,6 +151,8 @@
     else if ((text + "Simple Speedometer and Map App") == title)
         document.getElementById("iOS-Page").classList.add("active");
     else if ((text + "Trap Shooting Scorecard App") == title)
+        document.getElementById("iOS-Page").classList.add("active");
+    else if ((text + "Augmented Reality Visualizer App") == title)
         document.getElementById("iOS-Page").classList.add("active");
 
 </script>
