--- a/AugmentedRealityVisualizer.html
+++ b/AugmentedRealityVisualizer.html
@@ -68,7 +68,7 @@
             <div>
                 <h3>Current Availability</h3>
                 <p>Augmented Reality Visualizer is available for free on the iOS app store. It can only be downloaded as an iPhone or iPad application.</p>
-                <p><strong><a href="https://itunes.apple.com/us/app/trap-shooting-scorecard/id1450821405?mt=8">Download from the App Store here.</a></strong></p>
+                <p><strong><a href="https://apps.apple.com/us/app/augmented-reality-visualizer/id1515131292">Download from the App Store here.</a></strong></p>
                 <h3>App Description</h3>
                 <p>
                     Augmented Reality Visualizer allows you to view your digital 3D models in real life.
