--- a/ContactUs.html
+++ b/ContactUs.html
@@ -79,6 +79,7 @@
                         <li><a href="ComputerScienceCalculator.html">Computer Science Converter</a></li>
                         <li><a href="SpeedometerPlusMap.html">Simple Speedometer and Map</a></li>
                         <li><a href="HolidayClicker.html">Holiday Clicker</a></li>
+                        <li><a href="AugmentedRealityVisualizer.html">Augmented Reality Visualizer</a></li>
                     </ul>
                 </li>
                 <li>
@@ -108,9 +109,11 @@
                 <li><a href="https://apps.apple.com/us/app/computer-science-converter/id1451753843">Computer Science Converter Download</a></li>
                 <li><a href="https://apps.apple.com/us/app/simple-speedometer-and-map/id1485405938">Simple Speedometer and Map Download</a></li>
                 <li><a href="https://apps.apple.com/us/app/holiday-clicker/id1490141107">Holiday Clicker Download</a></li>
+                <li><a href="https://apps.apple.com/us/app/augmented-reality-visualizer/id1515131292">Augmented Reality Visualizer Download</a></li>
                 <li><a href="https://play.google.com/store/apps/details?id=com.ar.liftcalculator">Lift Force Calculator Download</a></li>
                 <li><a href="Documents/DevelopedNotDownloadedBusinessPlan.pdf" download="Developed-Not-Downloaded-Business-Plan">Business Plan Download</a></li>
                 <li><a href="https://ajrotert.github.io/ConnectingWebsiteToFirebase/index.html">FireChat Project</a></li>
+                <li><a href="https://codepython.life/CodePython/index.html">Numeric Detector Project</a></li>
             </ul>
             <h1>Website URLs</h1>
             <ul>
