--- a/Dynamic/HTML/iOSPlaceholder.html
+++ b/Dynamic/HTML/iOSPlaceholder.html
@@ -119,4 +119,24 @@
             </center>
         </div>
     </div>
+    <div class="block_region">
+        <a class="overlay_region"></a>
+        <div class="inner_region">
+            <center>
+                <img class="resizing" src="Images/Projects/ARViewer.png" alt="Augmented Reality Visualizer" />
+                <h2><i>Augmented Reality Visualizer</i></h2>
+                <p>Published: <a href="AugmentedRealityVisualizer.html">Support Page</a></p>
+                <p>View at the App Store: <a href="https://apps.apple.com/us/app/augmented-reality-visualizer/id1515131292">Visit Now</a></p>
+                <p>Language Used: Swift</p>
+                <p>About:</p>
+                <p class="just">
+                    Augmented Reality Visualizer uses ARKit to place 3D objects in the real world for both iPhone, and iPads. The app allows for
+                    multiple file selections to be uploaded into the app to build users own scenes. Gestures are used to implement custom
+                    object controls.
+                </p>
+
+                <hr class="table" />
+            </center>
+        </div>
+    </div>
 </div>
