--- a/AboutMe.html
+++ b/AboutMe.html
@@ -7,6 +7,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Find out about the developer, Andrew Rotert.">
+    <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, south dakota, published, engineering, college, development">
+    <meta name="author" content="Andrew Rotert">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Developed Not Downlaoded | About The Developer</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
     <link rel="apple-touch-icon" href="Images/weblogo180.png">
@@ -45,7 +50,7 @@
             <p class="just bio">
                 I am from Sioux Falls, SD. I got into programming because I like to problem solve. I am currently majoring in computer science and applied mathematics at Dakota State University.
                 I enjoy taking on new challenges and learning new techniques to solve them. Over my sophomore year of college, after completing Object Oriented design, I got into mobile app
-                development. I currently have five published iOS apps, and one published Android app. Now in my third year I built this website as way to show my work, as well support pages
+                development. I currently have six published iOS apps, and one published Android app. Now in my third year I built this website as way to show my work, as well support pages
                 for my published applications.
             </p>
         </div>
