--- a/ComputerScienceCalculator.html
+++ b/ComputerScienceCalculator.html
@@ -7,6 +7,11 @@ body {
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Find out about Computer Science Calculator. An iOS app focused on an necessary computer science calculations. Website contains screenshots, support, and privacy policy.">
+    <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, Computer Science Calculator, published, engineering, iOS, projects, development">
+    <meta name="author" content="Andrew Rotert">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Developed Not Downlaoded | Computer Science Calculator App</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
     <link rel="apple-touch-icon" href="Images/weblogo180.png">
