--- a/ProjectView.html
+++ b/ProjectView.html
@@ -8,6 +8,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Click a project to find out more.">
+    <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, iOS, published, engineering, android, projects, development, web">
+    <meta name="author" content="Andrew Rotert">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Developed Not Downlaoded | Project View</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
     <link rel="apple-touch-icon" href="Images/weblogo180.png">
