--- a/BusinessPlan.html
+++ b/BusinessPlan.html
@@ -7,6 +7,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Andrew Rotert's 2020 business plan competition submission.">
+    <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, business plan, published, engineering, web, projects, development">
+    <meta name="author" content="Andrew Rotert">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Developed Not Downlaoded | Business Plan</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
     <link rel="apple-touch-icon" href="Images/weblogo180.png">
