--- a/ContactUs.html
+++ b/ContactUs.html
@@ -7,6 +7,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Contact the developer, Andrew Rotert. Find support for iOS, Android and Web apps.">
+    <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, android, published, engineering, iOS, projects, development, web">
+    <meta name="author" content="Andrew Rotert">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Developed Not Downlaoded | Contact Us</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
     <link rel="apple-touch-icon" href="Images/weblogo180.png">
