--- a/LiftCoefficientCalculator.html
+++ b/LiftCoefficientCalculator.html
@@ -8,6 +8,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Find out about Lift Coefficient Calculator. An Android based utility. Website contains screenshots, support, and privacy policy.">
+    <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, Lift Coefficient Calculator, published, engineering, android, projects, development">
+    <meta name="author" content="Andrew Rotert">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Developed Not Downlaoded | Lift Coefficient Calculator App</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
     <link rel="apple-touch-icon" href="Images/weblogo180.png">
