--- a/SpeedometerPlusMap.html
+++ b/SpeedometerPlusMap.html
@@ -8,6 +8,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Find out about Simple Speedometer Plus Map. An iOS based gps system. Website contains screenshots, support, and privacy policy.">
+    <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, Simple Speedometer Plus Map, published, engineering, iOS, projects, development, gps">
+    <meta name="author" content="Andrew Rotert">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Developed Not Downlaoded | Simple Speedometer and Map App</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
     <link rel="apple-touch-icon" href="Images/weblogo180.png">
