--- a/TrapshootingScorecard.html
+++ b/TrapshootingScorecard.html
@@ -8,6 +8,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Find out about Trap Shooting Scorecard. An iOS based scoring app. Website contains screenshots, support, and privacy policy.">
+    <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, Trap Shooting Scorecard, published, engineering, iOS, projects, development, trapshooting">
+    <meta name="author" content="Andrew Rotert">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Developed Not Downlaoded | Trap Shooting Scorecard App</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
     <link rel="apple-touch-icon" href="Images/weblogo180.png">
