--- a/iOS.html
+++ b/iOS.html
@@ -8,6 +8,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Find out about Andrew Rotert's iOS projects. Currently I have six published projects focused on trap shooting, computer science, game design, gps, golfing, and augmented reality.">
+    <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, iOS, published, engineering, apple, projects, development">
+    <meta name="author" content="Andrew Rotert">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Developed Not Downlaoded | iOS Projects</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
     <link rel="apple-touch-icon" href="Images/weblogo180.png">
