--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@ body {
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Platform to showcase Andrew Rotert's published software, personal projects, and resume. Andrew has seven published apps, across iOS and Android platforms. Visit the website to learn more.">
+    <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, android, published, engineering, iOS, projects, development, web, personal, website">
+    <meta name="author" content="Andrew Rotert">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Developed Not Downlaoded | Home</title>
     <!-- <link rel="icon" type="image/x-icon" href="Images/DevLogo.ico" />-->
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
@@ -21,19 +26,15 @@ body {
     <link rel="stylesheet" href="Styles/defaults.css" />
     <link rel="stylesheet" href="Styles/IndexLayout.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script>
-
-        if (document.location.hostname.includes("cs-developer") && document.referrer=="") {
+    <script>if (document.location.hostname.includes("cs-developer") && document.referrer == "") {
             document.location.href = "http://cs-developer.info/AboutMe.html"
         }
-        if (document.location.hostname.includes("projects.cs-developer") && document.referrer=="") {
+        if (document.location.hostname.includes("projects.cs-developer") && document.referrer == "") {
             document.location.href = "http://cs-developer.info/Projects.html"
         }
         if (document.location.hostname.includes("github.cs-developer") && document.referrer == "") {
             document.location.href = "https://github.com/ajrotert/repositories"
-        }
-
-    </script>
+        }</script>
 
 </head>
 <body>
